--- a/examples/sinatra/object_inspector/README.rdoc
+++ b/examples/sinatra/object_inspector/README.rdoc
@@ -9,12 +9,17 @@ is useful for debugging (save suspect objects etc.).  See
 === Prerequisites
 
 In order to run the applications in this directory, you need to install
-rubygem versions of rack and sinatra (see <tt>../README.rdoc</t>).
+rubygem versions of rack and sinatra.  See <tt>Gemfile.lock</tt> for the
+latest tested versions.
+
+To install gems, first install bundler gem, then:
+
+  $ $MAGLEV_HOME/bin/bundle install
 
 === To Run the Object Inspector:
 
   $ rake objectlog
 
-Then hit http://localhost:7654/
+Then hit http://localhost:4567/
 
 
