--- a/Changes
+++ b/Changes
@@ -3,7 +3,11 @@
   For more precise details see: http://bit.ly/d3C6S1
 
 == Unreleased Changes
+
+== Changes for 24893 2010-12-20
+* Fix problem running minitest 2.0.1
 * Add implementation for Kernel#exit!
+* Release with first Beta of underlying GemStone 3.0 system
 
 == Changes for 24864 2010-12-14
 * No Ruby code changes
