--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
   For more precise details see: http://bit.ly/d3C6S1
 
 == Unreleased Changes
+* Pre-install rake-0.8.7 gem.
 
 == Changes for 24924 2010-12-23
 * Updates to openssl/random.rb to help with crypto work
