--- a/Changes
+++ b/Changes
@@ -4,7 +4,9 @@
 
 == Unreleased Changes
 
+== Changes for 249?? 2011-01-07
 * Fix Trac 827 , problems with automatic to_proc coercion
+* Update underlying GemStone 3.0 system to Beta2
 
 == Changes for 24984 2011-01-06
 * Pre-install rake-0.8.7 gem
