--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@
 
 == Unreleased Changes
 
+* Fix Trac 830 , problem in automatic to_proc coercion
+
 == Changes for 24990 2011-01-07
 * Fix Trac 827 , problems with automatic to_proc coercion
 * Update underlying GemStone 3.0 system to Beta2
