--- a/Changes
+++ b/Changes
@@ -5,6 +5,9 @@
 == Unreleased Changes
 
 * Fix Trac 830 , problem in automatic to_proc coercion
+* Update Rails support to Rails 3.0.3.  The example Gemfile now points to
+  Rails 3.0.3, and the active support patches are updated to handle either
+  Rails 3.0.3 or Rails 3.0.0.
 
 == Changes for 24990 2011-01-07
 * Fix Trac 827 , problems with automatic to_proc coercion
