--- a/Changes
+++ b/Changes
@@ -10,7 +10,9 @@
   Rails 3.0.3 or Rails 3.0.0.
 * Fix Trac 833, exhibited as undefined `[]' on NilClass when using
   Rack::Mount w/o -MallIvsDynamic
-
+* Add -q option to maglev-ruby.  Using both -q and -d runs in debug, but
+  w/o all the banner output at VM startup.
+  
 == Changes for 24990 2011-01-07
 * Fix Trac 827 , problems with automatic to_proc coercion
 * Update underlying GemStone 3.0 system to Beta2
