Updated Changes file for svn checkin

--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
 == Unreleased Changes
 
 * Fix Trac 843
+* Fix error in File.readlink
 
 == Changes for 25127 2011-01-28
 * First pass at implementing ruby-debug API. No attempt has been made to
