Update tags for specs

--- a/spec/tags/language/predefined_tags.txt
+++ b/spec/tags/language/predefined_tags.txt
@@ -22,3 +22,21 @@ fails:Processing RUBYOPT raises a RuntimeErrorError for '-0'
 fails:Processing RUBYOPT raises a RuntimeErrorError for '--copyright'
 fails:Processing RUBYOPT raises a RuntimeErrorError for '--version'
 fails:Processing RUBYOPT raises a RuntimeErrorError for '--yydebug'
+fails:Processing RUBYOPT adds the -I path to $LOAD_PATH
+fails:Processing RUBYOPT sets $DEBUG to true for '-d'
+fails:Processing RUBYOPT sets $VERBOSE to true for '-w'
+fails:Processing RUBYOPT sets $VERBOSE to true for '-W'
+fails:Processing RUBYOPT sets $VERBOSE to nil for '-W0'
+fails:Processing RUBYOPT sets $VERBOSE to true for '-W2'
+fails:Processing RUBYOPT requires the file for '-r'
+fails:Processing RUBYOPT sets $KCODE to 'NONE' with '-K'
+fails:Processing RUBYOPT sets $KCODE to 'NONE' with '-Ka'
+fails:Processing RUBYOPT sets $KCODE to 'NONE' with '-KA'
+fails:Processing RUBYOPT sets $KCODE to 'NONE' with '-Kn'
+fails:Processing RUBYOPT sets $KCODE to 'NONE' with '-KN'
+fails:Processing RUBYOPT sets $KCODE to 'EUC' with '-Ke'
+fails:Processing RUBYOPT sets $KCODE to 'EUC' with '-KE'
+fails:Processing RUBYOPT sets $KCODE to 'UTF8' with '-Ku'
+fails:Processing RUBYOPT sets $KCODE to 'UTF8' with '-KU'
+fails:Processing RUBYOPT sets $KCODE to 'SJIS' with '-Ks'
+fails:Processing RUBYOPT sets $KCODE to 'SJIS' with '-KS'
