--- a/Changes
+++ b/Changes
@@ -3,6 +3,8 @@
   For more precise details see: http://bit.ly/d3C6S1
 
 == Unreleased Changes
+* Added topaz script to load Seaside into MagLev using
+  rake maglev:input_file[loadSeaside.topaz]
 
 == Changes for 25191 2011-02-07
 * Fix Trac 839
