Prep for build 25218 - first Seaside build

--- a/Changes
+++ b/Changes
@@ -4,10 +4,11 @@
 
 == Unreleased Changes
 
-== Changes for 25201 2011-02-08
+== Changes for 25218 2011-02-09
 * Added topaz script to load Seaside into MagLev using
   rake maglev:input_file[src/topaz/loadSeaside.topaz]
-* Fix Trac 839
+  See src/topaz/README.rdoc
+* Fix Trac 839, 849
 * Adjust code in libcrypto.rb for new version of embedded libcrypto.so 
 * Minor bugfixes in underlying GemStone 3.0 system
 
