--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@
 
 == Unreleased Changes
 
+* Fix Trac 850
+
 == Changes for 25223 2011-02-09
 * Added topaz script to load Seaside into MagLev using
   rake maglev:input_file[src/topaz/loadSeaside.topaz]
